--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400&display=swap">
   <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-  <title>React App</title>
+  <title>App đặt Tour du lịch</title>
 </head>
 
 <body>
